--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -1,22 +1,62 @@
 body{
-    background-color: #25274D;
+    background-color: #1C1F1B;
+    color: #f9f9f9
+    
     
     }
+
+    .column {
+        float: left;
+        width: 33.33%;
+        text-align: center;
+        font-style: normal;
+        font-family: Ariel, "Times New Roman", san-serif;
+        color: #f9f9f9;
+      }
+      
+      /* Clear floats after the columns */
+      .row:after {
+        content: "";
+        display: table;
+        clear: both;
+      }
+      
+      /* Responsive layout - makes the three columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
+      @media screen and (max-width: 600px) {
+        .column {
+          width: 100%;
+        }
+      }
+      .footer {
+        background-color: #F1F1F1;
+        text-align: center;
+        padding: 10px;
+      }
     
     h1{
     text-align: center;
     font-size: 200%;
-    line-height: 200%;
+    line-height: 30%;
     font-style: normal;
     font-family: Ariel, "Times New Roman", san-serif;
-    color: #ffffff;
+    color: #f9f9f9;
     
+    }
+    h2{
+        text-align: center;
+        font-size: 200%;
+        line-height: 30%;
+        font-style: normal;
+        font-family: Ariel, "Times New Roman", san-serif;
+        color: #f9f9f9;
+
     }
     
     header {
-    background-color: #464866;
+    background-color: #C9C0A5;
     text-align: center;
     margin: 15px;
+    border-radius: 20px;
     padding: 15px;
     }
     
@@ -30,15 +70,18 @@ body{
     text-decoration: none;
     
     }
-    a:visited:{
-    color:#2E9CCA;
+    a:visited{
+    color:#7A9282;
     }
     
     a:hover{
-    color:#29648A;
+    color:#2877B5;
     
     }
     
     a:focus{
-        color:#29648A;
+        color:#1c1F1B;
     }
+
+
+
