--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -5,6 +5,13 @@ body{
     
     }
 
+    img{
+        width: 350px;
+        height: 400px;
+        float: right;
+        display: display-inside;
+    }
+
     .column {
         float: left;
         width: 33.33%;
@@ -14,14 +21,12 @@ body{
         color: #f9f9f9;
       }
       
-      /* Clear floats after the columns */
       .row:after {
         content: "";
         display: table;
         clear: both;
       }
       
-      /* Responsive layout - makes the three columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
       @media screen and (max-width: 600px) {
         .column {
           width: 100%;
