--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -1,41 +1,66 @@
 body{
     background-color: #1C1F1B;
-    color: #f9f9f9
+    color: #f9f9f9;
     
     
     }
+    Nav{
+        align-self: center;
+    }
+
+    .left{
+        align-items: center;
+    }
+
+    
+    .fname{
+        Height: 400px;
+        Width: 400px;
+
+    }
+    .action_page.php{
+        align-content: center;
+        display: inline-block;
+
+    }
+    textarea{
+        Height: 300px;
+        Width: 300px;
+        float: right;
+        align-self: center;
+
+    }
+
 
     img{
-        width: 350px;
-        height: 400px;
+        width: 250px;
+        height: 250px;
         float: right;
         display: display-inside;
     }
-
-    .column {
-        float: left;
-        width: 33.33%;
-        text-align: center;
-        font-style: normal;
-        font-family: Ariel, "Times New Roman", san-serif;
-        color: #f9f9f9;
-      }
+    .container{
+        position: absolute;
+        align-content: center;
+        content: 0;
+        width: 100%;
+        height: 3rem; 
+    }
+video{
+    
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  Height: 300px;
+    Width: 300px;
+}
+    
       
-      .row:after {
-        content: "";
-        display: table;
-        clear: both;
-      }
-      
-      @media screen and (max-width: 600px) {
-        .column {
-          width: 100%;
-        }
-      }
-      .footer {
-        background-color: #F1F1F1;
-        text-align: center;
-        padding: 10px;
+    footer{
+     background-color: #C9C0A5;
+    text-align: center;
+    margin: 15px;
+    border-radius: 20px;
+    padding: 15px;   
       }
     
     h1{
@@ -44,13 +69,13 @@ body{
     line-height: 30%;
     font-style: normal;
     font-family: Ariel, "Times New Roman", san-serif;
-    color: #f9f9f9;
+    color:#7A9282;
     
     }
     h2{
         text-align: center;
         font-size: 200%;
-        line-height: 30%;
+        line-height: 100%;
         font-style: normal;
         font-family: Ariel, "Times New Roman", san-serif;
         color: #f9f9f9;
@@ -76,7 +101,7 @@ body{
     
     }
     a:visited{
-    color:#7A9282;
+    color:#000000;
     }
     
     a:hover{
